fixed HTML, .wrapper2 was inside .wrapper.
Also index.js wouldn't start for me, extra parenthesis.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </fieldset>
   </form>  
 </div>
+</div>
 
 <!-- FORGIVENESS FORM/PART 2 -->
 
@@ -44,6 +45,7 @@
       </div>
     </fieldset>
   </form>  
+</div>
 </div>
 
 
