Got interactivity working the way it should!

--- a/display.html
+++ b/display.html
@@ -1,8 +1,18 @@
 <html>
 <head>
+
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<title></title>
 </head>
 <body>
+	<h1> The Forgiveness Databank <span class="blinker"></span></h1>
+	<hr>
+	
+
 
 </body>
 </html>
+
+
+<!-- could use js setinterval in browser to refresh the information -->
+
