--- a/display.html
+++ b/display.html
@@ -2,13 +2,33 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<title></title>
 </head>
 <body>
 	<h1> The Forgiveness Databank <span class="blinker"></span></h1>
 	<hr>
-	
 
+	<div id="text">
+	loading
+	</div>
+	
+<script>
+$(document).ready(function(){
+  var socket = io();
+  socket.on("displayrow", function(displayrow){
+  	console.log(displayrow)
+  	if (window.location.hash == "#apology") {
+	$("#text").html(displayrow.apology); 
+  	}
+else if (window.location.hash =="#forgiveness") {
+	$("#text").html(displayrow.forgiveness); 
+}
+  })
+  });
+
+</script>
 
 </body>
 </html>
