--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-		<h1> THE FORGIVENESS DATABANK</h1>
+		<h1> THE FORGIVENESS DATABANK </h1>
 
 <!-- APOLOGY FORM/PART 1 -->
 	
@@ -20,7 +20,7 @@
         <textarea id="message" placeholder="..." required></textarea>        
       </div>
       <div class="form_grp">
-      <input type="submit" id="send"></input>
+      <button type="submit" id="send">submit for forgiveness</button>
       
       </div>
     </fieldset>
@@ -35,12 +35,12 @@
   <form id="forgivenessform">
     <fieldset>
       <div class="form_grp">
-        <label>give forgiveness here</label>
+        <label>To finish submitting your apology, you must write a letter of forgiveness to the apology below</label>
         <div id="apologyprompt"> </div>
         <textarea id="message2" placeholder="..." required></textarea>        
       </div>
       <div class="form_grp">
-      <input type="submit" id="send"></input>
+      <button type="submit" id="send">submit forgiveness</button>
       
       </div>
     </fieldset>
